# timedef

./: README.md
src/timedef/: __init__.py  example.py  pyproject.toml  setup.py  timedef.py
