[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "timedef"
version = "0.0.1"
authors = [
  { name="Cleyton Pedroza", email="cleytonpedroza@gmail.com" },
]
description = "This package provides a decorator function `timedef` that can be used to measure the execution time of other functions in Python."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"